--- a/Journey/Journey/Resources/Storyboards/Auth/Login.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Auth/Login.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -13,30 +14,108 @@
             <objects>
                 <viewController storyboardIdentifier="LoginViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Y6W-OH-hqX" customClass="LoginViewController" customModule="Journey" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4bk-Qy-Ym3">
-                                <rect key="frame" x="137" y="413" width="142" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="아요힘내 ㅋ 홈으로 고고"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="journeyMainSampleImg" translatesAutoresizingMaskIntoConstraints="NO" id="lvQ-qD-3Mp">
+                                <rect key="frame" x="88" y="122" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="8yo-1L-act"/>
+                                    <constraint firstAttribute="height" constant="200" id="WIY-CL-ut9"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="이메일 주소" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lnf-3u-DHh">
+                                <rect key="frame" x="24" y="346" width="327" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="327" id="9Kb-05-pSw"/>
+                                    <constraint firstAttribute="height" constant="40" id="hEg-zm-9rZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <textInputTraits key="textInputTraits" keyboardType="phonePad" textContentType="email"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="비밀번호" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="TXe-88-DED">
+                                <rect key="frame" x="24" y="394" width="327" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="equ-8Y-GVP"/>
+                                    <constraint firstAttribute="width" constant="327" id="wcH-jv-lmR"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" secureTextEntry="YES" textContentType="password"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K6r-Lj-O8f">
+                                <rect key="frame" x="24" y="459" width="327" height="40"/>
+                                <color key="backgroundColor" name="Pink"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="ubf-3W-kz5"/>
+                                    <constraint firstAttribute="width" constant="327" id="vAa-R2-hUL"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                <color key="tintColor" red="0.96078431610000004" green="0.96078431610000004" blue="0.96078431610000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <state key="normal" title="로그인"/>
                                 <connections>
-                                    <action selector="touchGoGoButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Xug-17-gxT"/>
+                                    <action selector="touchGoGoButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="i1X-DR-Asi"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D76-iV-XQ7">
+                                <rect key="frame" x="110" y="521" width="83" height="27"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <state key="normal" title="비밀번호 찾기  ㅣ">
+                                    <color key="titleColor" systemColor="systemGray2Color"/>
+                                </state>
+                                <connections>
+                                    <action selector="findPasswordButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="zou-xg-Hk3"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OAt-3L-jxc">
+                                <rect key="frame" x="203" y="521" width="42" height="27"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <state key="normal" title="회원가입">
+                                    <color key="titleColor" systemColor="systemGray2Color"/>
+                                </state>
+                                <connections>
+                                    <action selector="signUpButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Ieq-p3-6fg"/>
                                 </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Lnf-3u-DHh" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="0a3-a8-Fxx"/>
+                            <constraint firstItem="D76-iV-XQ7" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="110" id="9CT-OD-ed6"/>
+                            <constraint firstItem="TXe-88-DED" firstAttribute="top" secondItem="Lnf-3u-DHh" secondAttribute="bottom" constant="8" id="AYs-Yn-4hP"/>
+                            <constraint firstItem="TXe-88-DED" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="GmO-sQ-aMq"/>
+                            <constraint firstItem="K6r-Lj-O8f" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="Kl8-uf-oNS"/>
+                            <constraint firstItem="OAt-3L-jxc" firstAttribute="top" secondItem="K6r-Lj-O8f" secondAttribute="bottom" constant="20" id="LST-fN-4Ax"/>
+                            <constraint firstItem="Lnf-3u-DHh" firstAttribute="top" secondItem="lvQ-qD-3Mp" secondAttribute="bottom" constant="24" id="NNX-dY-87k"/>
+                            <constraint firstItem="K6r-Lj-O8f" firstAttribute="top" secondItem="TXe-88-DED" secondAttribute="bottom" constant="27" id="NcP-02-fzb"/>
+                            <constraint firstItem="lvQ-qD-3Mp" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="88" id="Va2-qB-d6u"/>
+                            <constraint firstItem="D76-iV-XQ7" firstAttribute="top" secondItem="K6r-Lj-O8f" secondAttribute="bottom" constant="20" id="hYL-ef-EGQ"/>
+                            <constraint firstItem="lvQ-qD-3Mp" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="78" id="iaC-bv-c7t"/>
+                            <constraint firstItem="OAt-3L-jxc" firstAttribute="leading" secondItem="D76-iV-XQ7" secondAttribute="trailing" constant="10" id="jue-WA-oAA"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="emailTextField" destination="Lnf-3u-DHh" id="r8l-cf-sHG"/>
+                        <outlet property="loginButton" destination="K6r-Lj-O8f" id="AMa-P0-7Aj"/>
+                        <outlet property="loginImageView" destination="lvQ-qD-3Mp" id="xoY-un-OzC"/>
+                        <outlet property="passwordTextField" destination="TXe-88-DED" id="Iyn-sw-Rgc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-104" y="64"/>
+            <point key="canvasLocation" x="-104.8" y="63.546798029556655"/>
         </scene>
     </scenes>
     <resources>
+        <image name="journeyMainSampleImg" width="310" height="308"/>
+        <namedColor name="Pink">
+            <color red="0.95300000905990601" green="0.48600000143051147" blue="0.62400001287460327" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
