--- a/Journey/Journey/Sources/Cells/CourseTableView/EvenDayTableViewCell.xib
+++ b/Journey/Journey/Sources/Cells/CourseTableView/EvenDayTableViewCell.xib
@@ -27,7 +27,7 @@
                                         <rect key="frame" x="3" y="3" width="60" height="60"/>
                                     </imageView>
                                 </subviews>
-                                <color key="backgroundColor" name="CourseUndoneGray"/>
+                                <color key="backgroundColor" name="Grey1Bg"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="66" id="50Z-1e-CEI"/>
                                     <constraint firstAttribute="trailing" secondItem="6eV-ht-Qjc" secondAttribute="trailing" constant="3" id="5Jm-27-RtU"/>
@@ -67,7 +67,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" name="Pink"/>
+                                <color key="backgroundColor" name="Pink2"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="2x0-NQ-DZV" secondAttribute="trailing" constant="12" id="a3J-dy-HR4"/>
                                     <constraint firstItem="2x0-NQ-DZV" firstAttribute="top" secondItem="cAp-Ts-isd" secondAttribute="top" constant="5" id="cX5-qu-8JU"/>
@@ -113,11 +113,11 @@
         <namedColor name="CourseBgGray">
             <color red="0.97600001096725464" green="0.97600001096725464" blue="0.97600001096725464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="CourseUndoneGray">
-            <color red="0.93300002813339233" green="0.93300002813339233" blue="0.93300002813339233" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="Grey1Bg">
+            <color red="0.90600001811981201" green="0.90600001811981201" blue="0.90600001811981201" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="Pink">
-            <color red="0.95300000905990601" green="0.48600000143051147" blue="0.62400001287460327" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="Pink2">
+            <color red="1" green="0.52899998426437378" blue="0.6470000147819519" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
