--- a/Journey/Journey/Sources/Cells/CourseTableView/FirstDayTableViewCell.xib
+++ b/Journey/Journey/Sources/Cells/CourseTableView/FirstDayTableViewCell.xib
@@ -19,7 +19,7 @@
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ayN-lo-PQE">
                         <rect key="frame" x="312" y="0.0" width="20" height="90"/>
-                        <color key="backgroundColor" name="Pink"/>
+                        <color key="backgroundColor" name="Pink2"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="20" id="78t-8k-tn9"/>
                             <constraint firstAttribute="height" constant="90" id="ADr-e8-FYP"/>
@@ -32,7 +32,7 @@
                                 <rect key="frame" x="3" y="3" width="60" height="60"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" name="Pink"/>
+                        <color key="backgroundColor" name="Pink2"/>
                         <constraints>
                             <constraint firstItem="t29-ZG-jYv" firstAttribute="leading" secondItem="CCZ-df-TIz" secondAttribute="leading" constant="3" id="8j9-ko-ovv"/>
                             <constraint firstAttribute="trailing" secondItem="t29-ZG-jYv" secondAttribute="trailing" constant="3" id="NZd-Fm-Nbl"/>
@@ -114,6 +114,9 @@
         </namedColor>
         <namedColor name="Pink">
             <color red="0.95300000905990601" green="0.48600000143051147" blue="0.62400001287460327" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Pink2">
+            <color red="1" green="0.52899998426437378" blue="0.6470000147819519" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
