--- a/Journey/Journey/Sources/Cells/CourseTableView/OddDayTableViewCell.xib
+++ b/Journey/Journey/Sources/Cells/CourseTableView/OddDayTableViewCell.xib
@@ -6,7 +6,6 @@
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -39,14 +38,6 @@
                             <constraint firstItem="JoR-95-xqW" firstAttribute="top" secondItem="QmC-Yq-Uzf" secondAttribute="top" id="27Z-YA-J4w"/>
                         </constraints>
                     </stackView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N6t-IT-2DW">
-                        <rect key="frame" x="262" y="142" width="20" height="24"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="20" id="ToV-QN-qRu"/>
-                            <constraint firstAttribute="height" constant="24" id="wsh-tq-yle"/>
-                        </constraints>
-                    </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HuI-8E-oTC">
                         <rect key="frame" x="230" y="100" width="66" height="66"/>
                         <subviews>
@@ -54,7 +45,7 @@
                                 <rect key="frame" x="3" y="3" width="60" height="60"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" name="CourseUndoneGray"/>
+                        <color key="backgroundColor" name="Grey1Bg"/>
                         <constraints>
                             <constraint firstItem="TN8-Nk-g1o" firstAttribute="leading" secondItem="HuI-8E-oTC" secondAttribute="leading" constant="3" id="6WX-lC-0zJ"/>
                             <constraint firstItem="TN8-Nk-g1o" firstAttribute="top" secondItem="HuI-8E-oTC" secondAttribute="top" constant="3" id="B71-Cf-d13"/>
@@ -74,7 +65,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" name="Pink"/>
+                        <color key="backgroundColor" name="Pink2"/>
                         <constraints>
                             <constraint firstItem="hA5-CL-N1N" firstAttribute="leading" secondItem="ffh-3t-dKY" secondAttribute="leading" constant="12" id="7UG-B5-7Bj"/>
                             <constraint firstAttribute="bottom" secondItem="hA5-CL-N1N" secondAttribute="bottom" constant="5" id="HIB-Ez-ngU"/>
@@ -87,9 +78,7 @@
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="HuI-8E-oTC" secondAttribute="trailing" constant="24" id="4U9-yE-jQD"/>
                     <constraint firstItem="JoR-95-xqW" firstAttribute="leading" secondItem="ffh-3t-dKY" secondAttribute="trailing" constant="41" id="K2h-ID-2kM"/>
-                    <constraint firstAttribute="trailing" secondItem="N6t-IT-2DW" secondAttribute="trailing" constant="38" id="MuK-aF-YXb"/>
                     <constraint firstItem="HuI-8E-oTC" firstAttribute="leading" secondItem="QmC-Yq-Uzf" secondAttribute="trailing" constant="20" id="Ztb-mj-oWr"/>
-                    <constraint firstAttribute="bottom" secondItem="N6t-IT-2DW" secondAttribute="bottom" id="bPg-Ic-4yQ"/>
                     <constraint firstItem="QmC-Yq-Uzf" firstAttribute="centerY" secondItem="TN8-Nk-g1o" secondAttribute="centerY" id="ivs-jV-Y51"/>
                     <constraint firstItem="ffh-3t-dKY" firstAttribute="centerY" secondItem="JoR-95-xqW" secondAttribute="centerY" id="kHM-rb-D1t"/>
                     <constraint firstAttribute="bottom" secondItem="HuI-8E-oTC" secondAttribute="bottom" id="t80-YK-svh"/>
@@ -102,7 +91,6 @@
                 <outlet property="dayLabel" destination="hA5-CL-N1N" id="ZmZ-cJ-SKE"/>
                 <outlet property="dayLabelBgView" destination="ffh-3t-dKY" id="1fH-3O-Mpq"/>
                 <outlet property="descriptionLabel" destination="496-Ws-be2" id="FrE-c4-A08"/>
-                <outlet property="nextDayRoadView" destination="N6t-IT-2DW" id="SpM-98-bxD"/>
                 <outlet property="propertyBgView" destination="HuI-8E-oTC" id="s37-lT-Ghs"/>
                 <outlet property="propertyImageView" destination="TN8-Nk-g1o" id="YfX-aB-2hU"/>
             </connections>
@@ -114,14 +102,11 @@
         <namedColor name="CourseBgGray">
             <color red="0.97600001096725464" green="0.97600001096725464" blue="0.97600001096725464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="CourseUndoneGray">
-            <color red="0.93300002813339233" green="0.93300002813339233" blue="0.93300002813339233" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="Grey1Bg">
+            <color red="0.90600001811981201" green="0.90600001811981201" blue="0.90600001811981201" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="Pink">
-            <color red="0.95300000905990601" green="0.48600000143051147" blue="0.62400001287460327" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="Pink2">
+            <color red="1" green="0.52899998426437378" blue="0.6470000147819519" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
