--- a/Journey/Journey/Resources/Storyboards/Feed/Feed.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Feed/Feed.storyboard
@@ -45,6 +45,17 @@
                                     <constraint firstAttribute="height" constant="50" id="B4g-TN-APh"/>
                                 </constraints>
                             </view>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zJm-TA-3Ki">
+                                <rect key="frame" x="350" y="753" width="48" height="49"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="48" id="hJD-24-TBt"/>
+                                    <constraint firstAttribute="height" constant="49" id="ws3-PI-9jP"/>
+                                </constraints>
+                                <state key="normal" image="floating"/>
+                                <connections>
+                                    <action selector="touchFloatingTopButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="GVl-Uf-JAe"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -52,6 +63,8 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="wtu-1M-Hvm" secondAttribute="bottom" id="17N-Uu-pVf"/>
                             <constraint firstItem="wtu-1M-Hvm" firstAttribute="top" secondItem="0VN-3I-WEj" secondAttribute="bottom" id="7L1-uX-XA9"/>
                             <constraint firstItem="0VN-3I-WEj" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="Tfl-cm-K6K"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="zJm-TA-3Ki" secondAttribute="trailing" constant="16" id="bB3-6j-3b9"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="zJm-TA-3Ki" secondAttribute="bottom" constant="11" id="dyq-Bo-DvF"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="wtu-1M-Hvm" secondAttribute="trailing" id="e8N-8w-FaT"/>
                             <constraint firstItem="wtu-1M-Hvm" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="qEg-xP-3kI"/>
                             <constraint firstItem="wtu-1M-Hvm" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="vdu-8g-B2Y"/>
@@ -62,6 +75,8 @@
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="feedCollectionView" destination="wtu-1M-Hvm" id="ike-H7-BjW"/>
+                        <outlet property="floatingTopButton" destination="zJm-TA-3Ki" id="b1Y-lZ-YvD"/>
+                        <outlet property="statusBarView" destination="0VN-3I-WEj" id="kRU-Cn-K1y"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -89,6 +104,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="floating" width="52" height="52"/>
         <image name="tabBarItem:Cnl-rA-Dil:image" width="128" height="114">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGBwpYJHZlcnNpb25ZJGFyY2hpdmVyVCR0b3BYJG9iamVjdHMSAAGGoF8QD05T
